# Penning_trap_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
penning/: CMakeLists.txt  penning.h
penning/physic_objects/: constants.h  field.h  narray.h  particle.h  solving_methods.h  space.h  vector3d.h
src/: CMakeLists.txt
src/penning/: CMakeLists.txt  penning.cpp  penning.h
src/penning/saved_configurations/: crossed_border.txt  no_field.txt  rotating_field.txt  simple_rotation.txt  spiral_rotation.txt  static_field1.txt  static_field2.txt  strange_config.txt  test.txt
src/phys/: CMakeLists.txt  phys.h
src/phys/physic_objects/: constants.h  field.h  narray.h  particle.h  solving_methods.h  space.h  vector3d.h
